--- a/fibonacci.html
+++ b/fibonacci.html
@@ -3,7 +3,7 @@
 <body>
 <script>
     let num=parseInt(prompt("Enter a number of times that you wanna print"));
-    document.write("Fibonacchi Sequence");
+    document.write("Fibonacchi Sequence <br>");
     a=0;
     b=1;
     for ( i = 1; i <= num; i++) {
